A bunch of improvements (#544)
* Fix spell

* Filter docker virtual network interface

* Update instruction to JDK 11 and above

* Fix performance problem for JDK HTTP Client

* Fix performance problem for Jedis

* Enlarge default batch size

* Optimize span name of httpclient